Advanced Search improvements and Simple Search improvements and bug fixes
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@1866 7033f55c-6c29-4ad8-afba-765cb616e738